--- a/HW1/HW1.tex
+++ b/HW1/HW1.tex
@@ -53,6 +53,8 @@ Some of the most amazing sensations will come from the fact that the user will b
 
 \section*{\underline{Compare and Contrast}}
 
+After trying out Cardboard, Daydream, both from Google, and Vive I have to say that Daydream feels a lot more comfortable on the eye and unlike the cardboard, placement of the device on head and face just doesn't feel awkward. The controller for Daydream VR is lot more responsive and cozy in hands. Despite all of they are no match to Vive. Vive gives users a better screen resolution, screen door effect (appearance that occurs where visible gaps between pixels are seen on a screen),  and it is graphically superior to everything else that I have experienced. Of course the last point can easily be justified by claiming that some companies make VR applications specifically for Vive. Vive comes with two controllers and a tracking device, for positional tracking. Most Virtual Reality systems like Cardboard and Daydream just give the users, or me in this case, the feeling of watching a simple 3 dimensional movie but with Vive users can actually sense that they are in a virtual world. 
+
 
 
 
