Almost done, just need to proofread and fix some formatting issues

--- a/HW1/HW1.tex
+++ b/HW1/HW1.tex
@@ -53,7 +53,12 @@ Some of the most amazing sensations will come from the fact that the user will b
 
 \section*{\underline{Compare and Contrast}}
 
-After trying out Cardboard, Daydream, both from Google, and Vive I have to say that Daydream feels a lot more comfortable on the eye and unlike the cardboard, placement of the device on head and face just doesn't feel awkward. The controller for Daydream VR is lot more responsive and cozy in hands. Despite all of they are no match to Vive. Vive gives users a better screen resolution, screen door effect (appearance that occurs where visible gaps between pixels are seen on a screen),  and it is graphically superior to everything else that I have experienced. Of course the last point can easily be justified by claiming that some companies make VR applications specifically for Vive. Vive comes with two controllers and a tracking device, for positional tracking. Most Virtual Reality systems like Cardboard and Daydream just give the users, or me in this case, the feeling of watching a simple 3 dimensional movie but with Vive users can actually sense that they are in a virtual world. 
+After trying out Cardboard, Daydream, both from Google, and Vive I have to say that Daydream feels a lot more comfortable on the eye and unlike the cardboard, placement of the device on head and face just doesn't feel awkward. The controller for Daydream VR is lot more responsive and cozy in hands. Despite all of they are no match to Vive. Vive gives users a better screen resolution, screen door effect (appearance that occurs where visible gaps between pixels are seen on a screen),  and it is graphically superior to everything else that I have experienced. Of course the last point can easily be justified by claiming that some companies make VR applications specifically for Vive. Vive comes with two controllers and a tracking device, for positional tracking.\\ 
+Most Virtual Reality systems like Cardboard and Daydream just give the users, or me in this case, the feeling of watching a simple 3 dimensional movie but with Vive users can actually sense that they are in a virtual world. \\
+
+To get into comparing the mentioned systems specifically we need to look at the resolution, tracking systems, rotational or positional, and hand controls. \\ As I have mentioned nothing can defeat Vive when it comes to resolution and graphics, but even Cardboard can give users a really neat and refined experience when it comes to resolution. Depending on the smartphone used on the Cardboard the users can have a nice experience with the resolution of the system. Vive tracking system has been almost flawless compared to Daydream and Cardboard. Cardboard and Daydream are atrocious when it comes to tracking the legs. In some cases if the user tries to track their legs with the Cardboard they might experience sickness which, from personal experience, would definitely limit the immersion.\\
+As for positional tracking Cardboard does not support that and I was not able to experience that with Daydream, but it should support positional tracking, hence Vive is definitely better in this category.
+One of the other most important devices that come with some VR systems is hand controllers, unfortunately again Cardboard does not have one. Daydream comes with a basic controller for navigating menus and some key movements within applications. Vive controller are outstanding. Vive controllers feel cozy and are comfortable to use. Haptic feedback is a major feature that comes with those controllers that makes the virtual world even more alive by giving the user feedback when the user interacts with the objects in the virtual world.
 
 
 
